--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular2-websocket": "^0.9.3",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng2-cookies": "^1.0.12",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
